# mcp-sqlite

./: .dockerignore  .env.example  .gitignore  Dockerfile  JSONRPC_MIGRATION_PLAN.md  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.yaml
py-mcp-client/: .env.example  QUICKSTART.md  README.md  chatbot.py  config.yaml  dataflow.md  example.py  mcp_client.py  ollama_client.py  requirements.txt
src/: mcp_handler.py  mcp_session.py  mcp_transport.py  server.py
src/database/: connection.py  crud_operations.py  query_builder.py
src/jsonrpc/: __init__.py  handler.py  models.py
src/utils/: errors.py  security.py  validation.py
tests/: README.md  test_crud_operations.py  test_integration.py  test_jsonrpc.py  test_jsonrpc_integration.py  test_mcp_protocol.py  test_mcp_streamable_http.py
